# seele

./: LICENSE  README.md  pyproject.toml
docs/: edge-defects-reference.md  questions-remaining.md
scripts/: arch_defects.py  edge_shape.py  m1_validate.py  m1_visualize.py  m2_analyze.py  m2_sweep.py  m3_floor.py  m4_predict.py  m4_realfield.py
seele/: __init__.py  analysis.py  edgewidth.py  fm.py  predict.py  sweeps.py  synthetic.py  targets.py
