[project]
name = "seele"
version = "0.1.0"
description = "SEELE — a-priori edge-error prediction for diffusion / flow-matching models. Edge-width estimator and analyses (synthetic-only for now)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Zeyu Xia", email = "zeyu.xia@virginia.edu" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
# The M2-M4 training stack (seele.fm / seele.sweeps and the m2-m4 scripts).
# The M1 measurement tools stay importable without it.
train = ["torch>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seele"]
